feat(ingestion): make range jobs async and parallelize receipt fetching
- POST /jobs now returns the jobId immediately with status RUNNING; the
  range is processed on a dedicated job-coordinator pool and progress is
  queryable via GET /jobs/{jobId}
- Redis lock and in-memory job slot are released when the async job
  finishes (whenComplete), not when the HTTP request returns
- Transaction receipts are fetched concurrently on a separate bounded
  receiptFetchExecutor pool, removing the sequential N+1 receipt fetch
  per block (separate pool avoids nested-task deadlock with the block
  extraction pool)
- Per-block ACID persistence, ordered checkpointing, resume-from-
  checkpoint, and failed-block recording are unchanged
- Tests updated for the async contract using direct executors